# Tiny-Music-Player

./: .gitignore  CMakeLists.txt  README.md  config.h
include/libmp3/: mp3.cpp  mp3.h
resources/: WindowIcon.h  appimage-builder.yml
resources/icon/: convert.sh
sources/: Actions.cpp  Constants.hpp  DrawImageButton.hpp  Events.cpp  Interface.cpp  Lock.hpp  MetadataParser.hpp  MusicPlayer.cpp  MusicPlayer.hpp  Utilities.cpp  main.cpp
